Codigo para la prueba del examen tipo A

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,20 @@
         android:text="Eliminar Estudiante" />
 
     <Button
+        android:id="@+id/btnAnyadirAsignatura"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Añadir asignatura" />
+
+    <Button
+        android:id="@+id/btnBuscarAsignatura"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Buscar Asignatura" />
+
+    <Button
         android:id="@+id/anyadirprofe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
